# minibox

./: .gitignore  Cargo.toml  README.md  memory.x
firmware/: Cargo.toml
firmware/src/: ble.rs  indications.rs  main.rs  xbox.rs
pcb/: .gitignore  ble-receiver.kicad_pcb  ble-receiver.kicad_pro  ble-receiver.kicad_sch
src/: ble.rs  board.rs  controls.rs  indications.rs  led.rs  main.rs  panic.rs  pmic.rs  xboxhid.rs
