[package]
edition = "2021"
name = "ble-sandbox"
version = "0.1.0"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = "z"
panic = "abort"
lto = true

[features]
default = ["defmt-logging", "platform-nrf52832"]
defmt-logging = [
  "defmt",
  "defmt-rtt",
  "embassy-executor/defmt",
  "embassy-time/defmt",
  "embassy-time/defmt-timestamp-uptime",
  "embassy-nrf/defmt",
  "nrf-softdevice/defmt",
  "panic-probe/print-defmt"
]
platform-nrf52832 = [
  "embassy-nrf/nrf52832",
  "nrf-softdevice/nrf52832"
]

[dependencies]
cortex-m = "0.7.6"
cortex-m-rt = "0.7.0"
panic-probe = "0.3"
git-version = "0.3.5"
defmt = { version = "0.3", optional = true }
defmt-rtt = { version = "0.4.0", optional = true }

[dependencies.embassy-executor]
git = "https://github.com/embassy-rs/embassy"
features = [ "arch-cortex-m", "executor-thread", "executor-interrupt", "integrated-timers" ]

[dependencies.embassy-time]
git = "https://github.com/embassy-rs/embassy"

[dependencies.nrf-softdevice]
git = "https://github.com/embassy-rs/nrf-softdevice"
features = [ "s132", "ble-gatt-server", "ble-peripheral", "critical-section-impl" ]

[dependencies.embassy-nrf]
git = "https://github.com/embassy-rs/embassy"
features = [ "time-driver-rtc1", "gpiote"  ]

[dependencies.embassy-sync]
git = "https://github.com/embassy-rs/embassy"
