[package]
edition = "2021"
name = "ble-sandbox"
version = "0.1.0"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = "z"
panic = "abort"
lto = true

[features]
default = ["defmt-logging", "platform-nrf52832"]
defmt-logging = [
  "defmt",
  "defmt-rtt",
  "embassy-executor/defmt",
  "embassy-time/defmt",
  "embassy-time/defmt-timestamp-uptime",
  "embassy-nrf/defmt",
  "nrf-softdevice/defmt",
  "panic-probe/print-defmt",
  "bq27xxx/defmt",
  "embedded-hal-async/defmt-03"
]
platform-nrf52832 = [
  "embassy-nrf/nrf52832",
  "nrf-softdevice/nrf52832"
]

[dependencies]
cortex-m = "0.7.6"
cortex-m-rt = "0.7.0"
panic-probe = "0.3"
git-version = "0.3.5"
defmt = { version = "0.3", optional = true }
defmt-rtt = { version = "0.4.0", optional = true }
static_cell = "2.0.0"
nrf-softdevice-s132 = { path = "../nrf-softdevice/nrf-softdevice-s132"}
nrf-softdevice = { path = "../nrf-softdevice/nrf-softdevice", features = [ "s132", "ble-gatt-client", "ble-central", "ble-sec", "critical-section-impl" ] }
byteorder = { version = "1.5.0", default-features = false }
assign-resources = "0.4.1"
# bq27xxx = "0.0.2"
embedded-hal-async = "1.0.0"
pid = "4.0.0"

[dependencies.bq27xxx]
# path = "../bq27xxx-rs/"
git = "https://github.com/dossalab/bq27xxx-rs"

[dependencies.embassy-executor]
# git = "https://github.com/embassy-rs/embassy"
path = "../embassy/embassy-executor"
features = [ "arch-cortex-m", "executor-thread", "executor-interrupt", "integrated-timers" ]

[dependencies.embassy-futures]
git = "https://github.com/embassy-rs/embassy"

[dependencies.embassy-time]
# git = "https://github.com/embassy-rs/embassy"
path = "../embassy/embassy-time"

# [dependencies.nrf-softdevice]
# git = "https://github.com/embassy-rs/nrf-softdevice"
# features = [ "s132", "ble-gatt-client", "ble-central", "ble-sec", "critical-section-impl" ]

[dependencies.embassy-nrf]
path = "../embassy/embassy-nrf"
features = [ "time-driver-rtc1", "gpiote"  ]

[dependencies.embassy-sync]
git = "https://github.com/embassy-rs/embassy"
